apps/demo-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-app
  namespace: demo-app
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: demo-app
  ports:
    - name: http
      port: 80
      targetPort: http
